(portal-ui) add analysis specific styles, fix flicker when switching among analyses, fix analysis header position.

--- a/dcc-portal-ui/src/main/js/app/styles/styles.css
+++ b/dcc-portal-ui/src/main/js/app/styles/styles.css
@@ -1647,6 +1647,23 @@ footer .dcc-col {
   color: #999999;
 }
 
+/* line 2, _sections/_analysis.scss */
+.analysis h3 {
+  margin-top: 0;
+}
+/* line 6, _sections/_analysis.scss */
+.analysis .sidepanel {
+  float: left;
+  width: 22%;
+  margin-right: 1rem;
+}
+/* line 12, _sections/_analysis.scss */
+.analysis .content {
+  float: left;
+  clear: right;
+  width: 75%;
+}
+
 /* line 1, _modules/_button.scss */
 .t_button, a.t_button {
   color: #fafafa;
@@ -3727,7 +3744,7 @@ td {
   background: #dc502e;
 }
 
-/* line 24, styles.scss */
+/* line 25, styles.scss */
 html {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: .7rem;
@@ -3735,30 +3752,30 @@ html {
   overflow-y: scroll;
 }
 @media (min-width: 1025px) {
-  /* line 24, styles.scss */
+  /* line 25, styles.scss */
   html {
     font-size: .8rem;
   }
 }
 @media (min-width: 1535px) {
-  /* line 24, styles.scss */
+  /* line 25, styles.scss */
   html {
     font-size: 0.9rem;
   }
 }
 
-/* line 38, styles.scss */
+/* line 39, styles.scss */
 b, i {
   font-weight: normal;
   font-style: normal;
 }
 
-/* line 43, styles.scss */
+/* line 44, styles.scss */
 .amp {
   font-family: serif;
 }
 
-/* line 47, styles.scss */
+/* line 48, styles.scss */
 .caps, h1, h4 {
   text-transform: uppercase;
 }
@@ -3771,39 +3788,39 @@ b, i {
     text-decoration: underline;
   }
 }*/
-/* line 63, styles.scss */
+/* line 64, styles.scss */
 .highlight {
   background: transparent;
   border: 0;
 }
 
-/* line 69, styles.scss */
+/* line 70, styles.scss */
 abbr {
   border-bottom: 1px dashed #e9931c;
 }
 
-/* line 73, styles.scss */
+/* line 74, styles.scss */
 code, pre {
   font-family: "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
 }
 
-/* line 81, styles.scss */
+/* line 82, styles.scss */
 pre {
   overflow: auto;
 }
 
-/* line 87, styles.scss */
+/* line 88, styles.scss */
 html, body {
   background: #f2f2f2;
 }
 
-/* line 91, styles.scss */
+/* line 92, styles.scss */
 article {
   border-top: 1px solid #cccccc;
   border-left: 1px solid #cccccc;
 }
 
-/* line 100, styles.scss */
+/* line 101, styles.scss */
 section {
   padding: 2rem;
   margin: 0;
@@ -3813,21 +3830,21 @@ section {
   border-bottom: 1px solid #cccccc;
 }
 
-/* line 109, styles.scss */
+/* line 110, styles.scss */
 section:last-child {
   border: none;
 }
 
-/* line 113, styles.scss */
+/* line 114, styles.scss */
 aside {
   font-size: .9rem;
 }
-/* line 115, styles.scss */
+/* line 116, styles.scss */
 aside section {
   padding: 1rem;
 }
 
-/* line 120, styles.scss */
+/* line 121, styles.scss */
 article.full {
   width: 100%;
   float: right;
@@ -3837,92 +3854,92 @@ article.full {
   border: 0;
 }
 
-/* line 125, styles.scss */
+/* line 126, styles.scss */
 ul, ul li {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-/* line 131, styles.scss */
+/* line 132, styles.scss */
 ol {
   vertical-align: middle;
 }
-/* line 133, styles.scss */
+/* line 134, styles.scss */
 ol p {
   margin: .2rem 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1rem;
 }
 
-/* line 142, styles.scss */
+/* line 143, styles.scss */
 .match {
   font-weight: 700;
 }
 
-/* line 146, styles.scss */
+/* line 147, styles.scss */
 .empty, .loading {
   color: #666666;
 }
-/* line 148, styles.scss */
+/* line 149, styles.scss */
 .empty h3, .loading h3 {
   color: #666666;
   margin-bottom: 0;
 }
 
-/* line 154, styles.scss */
+/* line 155, styles.scss */
 .loading-text {
   margin: 2rem;
 }
 
-/* line 158, styles.scss */
+/* line 159, styles.scss */
 .loading-icon {
   margin-top: 2rem;
   text-align: center;
 }
 
-/* line 163, styles.scss */
+/* line 164, styles.scss */
 .data-available {
   color: #1a9900;
 }
 
-/* line 167, styles.scss */
+/* line 168, styles.scss */
 .data-missing {
   color: #dc502e;
 }
 
-/* line 171, styles.scss */
+/* line 172, styles.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 175, styles.scss */
+/* line 176, styles.scss */
 .text-left {
   text-align: left;
 }
 
-/* line 179, styles.scss */
+/* line 180, styles.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 183, styles.scss */
+/* line 184, styles.scss */
 .link {
   cursor: pointer;
 }
 
-/* line 187, styles.scss */
+/* line 188, styles.scss */
 .ui-scrollfix {
   position: fixed;
   z-index: 99;
 }
 
-/* line 192, styles.scss */
+/* line 193, styles.scss */
 .h1-wrap {
   height: 5rem;
 }
 
-/* line 196, styles.scss */
+/* line 197, styles.scss */
 h1.ui-scrollfix, .sug-wrap.ui-scrollfix {
   width: 1200px;
   top: 0;
@@ -3931,44 +3948,44 @@ h1.ui-scrollfix, .sug-wrap.ui-scrollfix {
   border-bottom: 1px solid #f2f2f2;
 }
 @media (min-width: 1535px) {
-  /* line 196, styles.scss */
+  /* line 197, styles.scss */
   h1.ui-scrollfix, .sug-wrap.ui-scrollfix {
     width: 1440px;
   }
 }
 
-/* line 209, styles.scss */
+/* line 210, styles.scss */
 aside.ui-scrollfix {
   top: 5rem;
 }
-/* line 211, styles.scss */
+/* line 212, styles.scss */
 aside.ui-scrollfix section {
   background: transparent;
 }
 
-/* line 216, styles.scss */
+/* line 217, styles.scss */
 .open-in {
   font-size: 1rem;
   color: #999999;
   text-transform: uppercase;
 }
 
-/* line 223, styles.scss */
+/* line 224, styles.scss */
 h3:hover .pilcrow {
   opacity: 1;
 }
 
-/* line 228, styles.scss */
+/* line 229, styles.scss */
 .pilcrow {
   opacity: .1;
 }
 
-/* line 232, styles.scss */
+/* line 233, styles.scss */
 .t_sidebar {
   position: relative;
 }
 
-/* line 236, styles.scss */
+/* line 237, styles.scss */
 .t_notify_popup, #buorg {
   position: fixed;
   z-index: 1000000;
@@ -3982,37 +3999,37 @@ h3:hover .pilcrow {
   font-family: inherit;
 }
 
-/* line 249, styles.scss */
+/* line 250, styles.scss */
 .t_notify_link {
   cursor: pointer;
   color: #FFF;
 }
 
-/* line 254, styles.scss */
+/* line 255, styles.scss */
 .t_notify_link:hover {
   text-decoration: underline;
 }
 
-/* line 259, styles.scss */
+/* line 260, styles.scss */
 .t_notify_body {
   font-size: 1rem;
 }
 
-/* line 263, styles.scss */
+/* line 264, styles.scss */
 .t_notify_warning {
   background: #e9931c;
 }
 
-/* line 267, styles.scss */
+/* line 268, styles.scss */
 .t_notify_success {
   background: #1a9900;
 }
 
-/* line 273, styles.scss */
+/* line 274, styles.scss */
 #buorg div {
   padding: 0;
 }
-/* line 277, styles.scss */
+/* line 278, styles.scss */
 #buorg #buorgclose {
   position: relative;
   float: right;
@@ -4026,7 +4043,7 @@ h3:hover .pilcrow {
   padding-right: 1rem;
 }
 
-/* line 291, styles.scss */
+/* line 292, styles.scss */
 #loading-screen {
   position: fixed;
   z-index: 1000;
@@ -4040,18 +4057,18 @@ h3:hover .pilcrow {
   font-size: 6rem;
   color: #666666;
 }
-/* line 305, styles.scss */
+/* line 306, styles.scss */
 #loading-screen i, #loading-screen img {
   position: fixed;
   top: 50%;
   left: 50%;
 }
-/* line 310, styles.scss */
+/* line 311, styles.scss */
 #loading-screen i {
   margin-left: -2rem;
   margin-top: -8rem;
 }
-/* line 314, styles.scss */
+/* line 315, styles.scss */
 #loading-screen img {
   height: 3rem;
   margin-left: .7rem;
